[package]
name = "random-tree-models"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "random_tree_models"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
