[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "random-tree-models"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# version = "0.3.1"
authors = [
    {name = "eschmidt42", email="11818904+eschmidt42@users.noreply.github.com"}
]
description = "My implementation of a random selection of tree based models."
dependencies = [
    "seaborn",
    "rich",
    "scikit-learn",
    "jupyterlab",
    "pytest",
    "black",
    "isort",
    "pre-commit",
    "jupyter-contrib-nbextensions",
    "ipywidgets",
    "pandas",
    "pydantic",
    "snakeviz",
    "maturin",
    "polars",
    "pyarrow",
]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "random_tree_models._rust"

# [tool.black]
# line-length = 80

# [tool.isort]
# multi_line_output = 3
# line_length = 80
# include_trailing_comma = true
# profile = "black"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 80
indent-width = 4
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src",
]
[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# [tool.setuptools.packages.find]
# where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["random_tree_models"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.pytest.ini_options]
pythonpath = ["random_tree_models"]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow" # mark test as slow
]
