[project]
name = "random-tree-models"
version = "0.7.1"
description = "Implementation of a random selection of tree based models."
readme = "README.md"
authors = [
    { name = "eschmidt42", email = "11818904+eschmidt42@users.noreply.github.com" }
]
requires-python = ">=3.10.11"
dependencies = [
    "pandas>=2.0.2",
    "pydantic>=1.10.8",
    "rich>=13.3.5",
    "scikit-learn>=1.2.2",
    "seaborn>=0.12.2",

]

[project.scripts]
random-tree-models = "random_tree_models:main"

[tool.maturin]
module-name = "random_tree_models._core"
python-packages = ["random_tree_models"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "ipywidgets>=8.0.6",
    "isort>=5.12.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.0.0",
    "pre-commit>=3.3.2",
    "snakeviz>=2.2.0",
    "pip-audit>=2.9.0",
    "pytest-cov>=6.2.1",
]
